# scope-fastapi

./: .env.app  .env.binnacle  .env.client  .env.price  .env.sale  .env.sellout  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  SECURITY.md  app.py  main.py  pyproject.toml  scope 1.ipynb  scope.ipynb  scope.py  scope_copy.ipynb
callbacks/: update.py
callbacks/update/: options.py  update.py
callbacks/update/options/: filter.py  options.py
callbacks/write/: write.py
components/: button_action.py  logo.py  select.py  title.py
config/: app_settings.py  base_settings.py  init_settings.py  settings.py
constants/: constants.py
core/: decorators.py  logging_setup.py  manager.py  persistence_manager.py
data/processed/: Liq_D. COPACIGULF_Logístico Fluvial_72024_29_10_2024_01_53_34.xlsx  Liq_D. COPACIGULF_Rebate_82024_29_10_2024_01_52_39.xlsx  Liq_D. GLORIA CELI_Reconocimiento Comercial_52024_24_10_2024_22_49_06.xlsx  Liq_D. GLORIA CELI_Reconocimiento Comercial_72024_28_10_2024_16_24_12.xlsx  Liq_Distbani_Logístico Fluvial_62024_25_10_2024_02_59_40.xlsx  Liq_Distbani_Reconocimiento Comercial_12022_25_10_2024_04_07_13.xlsx  Liq_Distbani_Reconocimiento Comercial_12022_25_10_2024_04_10_26.xlsx  Liq_Distbani_Reconocimiento Comercial_12022_25_10_2024_04_12_04.xlsx  Liq_Distbani_Reconocimiento Comercial_22021_25_10_2024_04_24_07.xlsx  Liq_Distbani_Reconocimiento Comercial_22021_25_10_2024_04_31_27.xlsx  Liq_Distbani_Reconocimiento Comercial_22021_25_10_2024_04_40_47.xlsx  Liq_Distbani_Reconocimiento Comercial_22021_25_10_2024_04_41_33.xlsx  Liq_Distbani_Reconocimiento Comercial_22021_25_10_2024_05_09_53.xlsx  Liq_Distbani_Reconocimiento Comercial_22021_25_10_2024_05_13_54.xlsx  Liq_Distbani_Reconocimiento Comercial_22021_25_10_2024_05_18_42.xlsx  Liq_Distbani_Reconocimiento Comercial_22022_25_10_2024_03_51_32.xlsx  Liq_Distbani_Reconocimiento Comercial_62022_25_10_2024_03_42_29.xlsx  Liq_Distbani_Reconocimiento Comercial_62024_03_11_2024_22_08_38.xlsx  Liq_Distbani_Reconocimiento Comercial_62024_03_11_2024_22_09_52.xlsx  Liq_Distbani_Reconocimiento Comercial_62024_03_11_2024_22_12_39.xlsx  Liq_Distbani_Reconocimiento Comercial_62024_03_11_2024_22_17_30.xlsx  Liq_Distbani_Reconocimiento Comercial_62024_03_11_2024_22_22_13.xlsx  Liq_Distbani_Reconocimiento Comercial_62024_03_11_2024_22_29_47.xlsx  Liq_Distbani_Reconocimiento Comercial_62024_03_11_2024_22_33_03.xlsx  Liq_Distbani_Reconocimiento Comercial_62024_03_11_2024_22_41_55.xlsx  Liq_Distbani_Reconocimiento Comercial_62024_03_11_2024_23_06_04.xlsx  Liq_Distbani_Reconocimiento Comercial_62024_05_11_2024_02_22_27.xlsx  Liq_Distbani_Reconocimiento Comercial_62024_25_10_2024_12_47_42.xlsx  Liq_Distbani_Reconocimiento Comercial_62024_28_10_2024_00_18_01.xlsx  Liq_Distbani_Reconocimiento Comercial_62024_28_10_2024_00_20_19.xlsx  Liq_Distbani_Reconocimiento Comercial_62024_28_10_2024_00_22_48.xlsx  Liq_Distbani_Reconocimiento Comercial_62024_28_10_2024_00_25_37.xlsx  Liq_Distbani_Reconocimiento Comercial_62024_28_10_2024_00_27_02.xlsx  Liq_Distbani_Reconocimiento Comercial_62024_28_10_2024_01_49_55.xlsx  Liq_Distbani_Reconocimiento Comercial_62024_28_10_2024_02_04_26.xlsx  Liq_Distbani_Reconocimiento Comercial_62024_28_10_2024_02_25_37.xlsx  Liq_Distbani_Reconocimiento Comercial_62024_28_10_2024_03_00_06.xlsx  Liq_Distbani_Reconocimiento Comercial_62024_28_10_2024_03_03_38.xlsx  Liq_Distbani_Reconocimiento Comercial_62024_28_10_2024_03_06_30.xlsx  Liq_Distbani_Reconocimiento Comercial_62024_28_10_2024_03_07_02.xlsx  (+53 more)
data/raw/: Bitacora_ELAX.xlsx  Maestra Clientes.xlsx  Ventas Maestra Acumulado 2024.xlsx
data/raw/parquet/: binnacle.parquet  clients.parquet  prices.parquet  sales.parquet  sellout.parquet
engineering/: engineering.py  utils.py
engineering/extraction/: extraction.py
engineering/loading/: formatting.py  loading.py  utils.py
engineering/loading/formatting/: excel_styles.py  (+2 more)
engineering/transformation/: transformation.py
routes/: app.py  filter.py  generate.py  load.py  process.py  routes.py
schemas/: binnacle.py  client.py  price.py  sale.py  sellout.py  validator.py
schemas/request/: file.py  options.py
utils/: utils.py
utils/format/: excel_styles.py
utils/image/: image.py
views/: view.py
views/home/: button.py  form.py  header.py  home.py
(+47 files in other folders)
